first working version of the mod.